more image testing

--- a/styles/index.css
+++ b/styles/index.css
@@ -11,6 +11,8 @@
     height: 100px;
     float: left;
     background: url('/Images/orb.png');   
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     margin: 15px;
 	border-radius: 25px;
 	text-align: center;
