--- a/styles/slower.css
+++ b/styles/slower.css
@@ -119,6 +119,6 @@ font-family:Arial, Helvetica, sans-serif;
 -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease; 
  text-align:left;
- color:#777f8e;
+ color:#BBBBBB;
 
  }
